@@ -3,14 +3,11 @@
 # should work just fine without them - and they are only
 # needed for test and debugging. So if you experience problems
 # and you solve them with enabling options here, please notify
-# the SANE/Avision maintainer.
+# the SANE/Avision maintainer: Rene Rebe <rene@exactcode.de>
 
 #option disable-gamma-table
 #option disable-calibration
-#option old-calibration
-#option one-calib-only
 #option force-a4
-#option disable-c5-guard
 
 scsi AVISION
 scsi FCPA
